objects/AVA_SFCPQ__CompanyList__c.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCPQ__AddressLine1__c</fullName>
        <description>Enter the line 1 address of your company.</description>
        <inlineHelpText>Enter the line 1 address of your company.</inlineHelpText>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AddressLine2__c</fullName>
        <description>Enter the line 2 address of your company.</description>
        <inlineHelpText>Enter the line 2 address of your company.</inlineHelpText>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__City__c</fullName>
        <description>Enter the city of your company.</description>
        <inlineHelpText>Enter the city of your company.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__CompanyCode__c</fullName>
        <description>ID for a company within AvaTax.</description>
        <inlineHelpText>ID for a company within AvaTax.</inlineHelpText>
        <label>Company Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Company_Id__c</fullName>
        <description>Enter the ID of your company.</description>
        <inlineHelpText>Enter the ID of your company.</inlineHelpText>
        <label>Company Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Country__c</fullName>
        <description>Enter the country of your company.</description>
        <inlineHelpText>Enter the country of your company.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__PostalCode__c</fullName>
        <description>Enter the postal code of your company.</description>
        <inlineHelpText>Enter the postal code of your company.</inlineHelpText>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__State__c</fullName>
        <description>Enter the state of your company.</description>
        <inlineHelpText>Enter the state of your company.</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AvaTax Company Code</label>
    <listViews>
        <fullName>AVA_SFCPQ__AvaTax_Companies</fullName>
        <columns>NAME</columns>
        <columns>AVA_SFCPQ__AddressLine1__c</columns>
        <columns>AVA_SFCPQ__AddressLine2__c</columns>
        <columns>AVA_SFCPQ__City__c</columns>
        <columns>AVA_SFCPQ__Country__c</columns>
        <columns>AVA_SFCPQ__PostalCode__c</columns>
        <columns>AVA_SFCPQ__State__c</columns>
        <filterScope>Everything</filterScope>
        <label>AvaTax Company Code</label>
    </listViews>
    <nameField>
        <label>AvaTax Company Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTax Company Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>